--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina Principal</title>
+    <link rel="stylesheet" href="estilo.css"/>
 </head>
 
 <body>
+    <header>
+            <div class="logo">
+                <img src="" alt=""/>
+            </div>
+        <nav>
+            <ul>
+                <li><a href="Inicio">Inicio</a></li>
+                <li><a href="Registro">Resgistrarse</a></li>
+                <li><a href="Pedido">Pedido</a></li>
+                <li><a href="Nosotros"> nosotros</a></li>
+            </ul>
+        </nav>
+    </header>
 
-</body>
-
+        <section id="Inicio" class="inicio">
+            <div class="contenido-inicio">
+                    <h1>Flores Encantadas</h1>
+                    <p>"Flores frescas, emociones frescas"</p>
+                    <p>"El encanto de las flores frescas"</p>
+                </div>
+        </section>
+    </body>
 </html>
