--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>
+     <header>
             <div class="logo">
                 <img src="" alt=""/>
             </div>
@@ -20,7 +20,7 @@
                 <li><a href="Nosotros"> nosotros</a></li>
             </ul>
         </nav>
-    </header>
+     </header>
 
         <section id="Inicio" class="inicio">
             <div class="contenido-inicio">
@@ -29,7 +29,19 @@
                     <p>"El encanto de las flores frescas"</p>
                 </div>
         </section>
+
+  
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" /> 
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba.png" alt="rosaRoja" title="Rosa roja" />
+        <img src="imagenes/prueba2.png" />
+
     </body>
-    <!--prueba editar-->
-    <!--prueba editar-->
 </html>
