--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
-    <link rel="stylesheet" href="estilo.css"/>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
-            <div class="logo">
-                <img src="" alt=""/>
-            </div>
+        <div class="logo">
+            <img src="" alt="" />
+        </div>
         <nav>
             <ul>
                 <li><a href="Inicio">Inicio</a></li>
@@ -22,14 +23,15 @@
         </nav>
     </header>
 
-        <section id="Inicio" class="inicio">
-            <div class="contenido-inicio">
-                    <h1>Flores Encantadas</h1>
-                    <p>"Flores frescas, emociones frescas"</p>
-                    <p>"El encanto de las flores frescas"</p>
-                </div>
-        </section>
-    </body>
-    <!--prueba editar-->
-    <!--prueba editar-->
+    <section id="Inicio" class="inicio">
+        <div class="contenido-inicio">
+            <h1>Flores Encantadas</h1>
+            <p>"Flores frescas, emociones frescas"</p>
+            <p>"El encanto de las flores frescas"</p>
+        </div>
+    </section>
+</body>
+<!--prueba editar-->
+<!--prueba editar-->
+
 </html>
