--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -38,7 +38,7 @@
                 </div>
         </section>
 
-  
+    <div>
         <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
         <img src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
         <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
@@ -63,7 +63,7 @@
         <img src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada" width="300" height="360" />
         <img src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
         <img src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300" height="360" />
-
+    </div>
 
 </body>
 </html>
