grid para el catalogo

--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -5,66 +5,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-
-     <header>
-            <div class="logo">
-                <img src="" alt=""/>
-            </div>
-
+    
     <header>
         <div class="logo">
             <img src="" alt="" />
         </div>
 
-        <nav>
-            <ul>
-                <li><a href="Inicio">Inicio</a></li>
-                <li><a href="Registro">Resgistrarse</a></li>
-                <li><a href="Pedido">Pedido</a></li>
-                <li><a href="Nosotros"> nosotros</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <div class="logo">
+                <img src="" alt="" />
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="Inicio">Inicio</a></li>
+                    <li><a href="Registro">Resgistrarse</a></li>
+                    <li><a href="Pedido">Pedido</a></li>
+                    <li><a href="Nosotros"> nosotros</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <section id="Inicio" class="inicio">
             <div class="contenido-inicio">
-                    <h1>Flores Encantadas</h1>
-                    <p>"Flores frescas, emociones frescas"</p>
-                    <p>"El encanto de las flores frescas"</p>
+                <h1>Flores Encantadas</h1>
+                <p>"Flores frescas, emociones frescas"</p>
+                <p>"El encanto de las flores frescas"</p>
+            </div>
+        </section>
+    </header>
+
+        <section id="centrarCaja">
+          
+            <div id="cajaImg">
+                <div id="cat">
+                <p id="titleC"> Vea parte de nuestro catalogo:</p>
                 </div>
+                <div id="img1">
+                    <img class="imgTipo1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
+                    <img class="imgTipo1" src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
+                    <img class="imgTipo1" src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
+                    <img class="imgTipo1" src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100"
+                        height="120" />
+                    <img class="imgTipo1" src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100"
+                        height="120" /> </br>
+
+                    <img class="imgTipo1" src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100"
+                        height="120" />
+                    <img class="imgTipo1" src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100"
+                        height="120" />
+                    <img class="imgTipo1" src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas" title="Orquidea Manchada"
+                        width="100" height="120" />
+                    <img class="imgTipo1" src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
+                    <img class="imgTipo1" src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
+                </div>
+                <div id="img2">
+                 <!--  <img src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
+                    <img src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
+                    <img src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
+                    <img src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
+                        width="300" height="360" />
+                    <img src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300"
+                        height="360" />
+
+                    <img src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300"
+                        height="360" />
+                    <img src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300"
+                        height="360" />
+                    <img src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada"
+                        width="300" height="360" />
+                    <img src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />-->
+                    <img class="imgTipo2" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300"  height="360" />
+                </div>
+            </div>
         </section>
 
-    <div>
-        <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
-        <img src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
-        <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
-        <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
-        <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
-
-        <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />   
-        <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
-        <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas" title="Orquidea Manchada" width="100" height="120" />
-        <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
-        <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
-
-
-        <img src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
-        <img src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
-        <img src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
-        <img src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo" width="300" height="360" />
-        <img src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300" height="360" />
-
-        <img src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300" height="360" />   
-        <img src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300" height="360" />
-        <img src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada" width="300" height="360" />
-        <img src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
-        <img src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300" height="360" />
-    </div>
-
+        <div id="pueba"></div>
 </body>
-</html>
 
+</html>
