--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -46,7 +46,7 @@
                 <p id="titleC"> Vea parte de nuestro catalogo:</p>
                 </div>
                 <div id="img1">
-                    <img class="imgTipo1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
+                    <img class="imgTipo1" id="borde1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
                     <img class="imgTipo1" src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
                     <img class="imgTipo1" src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
                     <img class="imgTipo1" src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100"
@@ -64,23 +64,23 @@
                     <img class="imgTipo1" src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
                 </div>
                 <div id="img2">
-                 <!--  <img src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
-                    <img src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
-                    <img src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
-                    <img src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
+                  <img class="imgTipo2" id="muestra1" src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
+                    <img class="imgTipo2" id="muestra2" src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
+                    <img class="imgTipo2"  id="muestra3" src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
+                 <!--     <img class="imgTipo2"  id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
                         width="300" height="360" />
-                    <img src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300"
+                    <img class="imgTipo2"  id="muestra5" src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300"
                         height="360" />
 
-                    <img src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300"
+                    <img class="imgTipo2" id="muestra6"  src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300"
                         height="360" />
-                    <img src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300"
+                    <img class="imgTipo2"  id="muestra7" src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300"
                         height="360" />
-                    <img src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada"
+                    <img class="imgTipo2"  id="muestra8" src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada"
                         width="300" height="360" />
-                    <img src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />-->
-                    <img class="imgTipo2" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300"  height="360" />
-                </div>
+                    <img class="imgTipo2"  id="muestra9" src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
+                    <img class="imgTipo2"  id="muestra10" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300"  height="360" />
+             -->   </div>
             </div>
         </section>
 
