--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -10,61 +10,84 @@
 
 <body>
 
-     <header>
-            <div class="logo">
-                <img src="" alt=""/>
-            </div>
-
     <header>
         <div class="logo">
             <img src="" alt="" />
         </div>
 
-        <nav>
-            <ul>
-                <li><a href="Inicio">Inicio</a></li>
-                <li><a href="Registro">Resgistrarse</a></li>
-                <li><a href="Pedido">Pedido</a></li>
-                <li><a href="Nosotros"> nosotros</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <div class="logo">
+                <img src="" alt="" />
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="Inicio">Inicio</a></li>
+                    <li><a href="Registro">Resgistrarse</a></li>
+                    <li><a href="Pedido">Pedido</a></li>
+                    <li><a href="Nosotros"> nosotros</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <section id="Inicio" class="inicio">
             <div class="contenido-inicio">
-                    <h1>Flores Encantadas</h1>
-                    <p>"Flores frescas, emociones frescas"</p>
-                    <p>"El encanto de las flores frescas"</p>
-                </div>
+                <h1>Flores Encantadas</h1>
+                <p>"Flores frescas, emociones frescas"</p>
+                <p>"El encanto de las flores frescas"</p>
+                <p>Personalizá el ramo de tus sueños!</p>
+            </div>
         </section>
 
-    <div>
-        <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
-        <img src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
-        <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
-        <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
-        <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
+        <div>
+            <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
+            <img src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
+            <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
+            <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
+            <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
 
-        <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />   
-        <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
-        <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas" title="Orquidea Manchada" width="100" height="120" />
-        <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
-        <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
+            <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
+            <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
+            <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas" title="Orquidea Manchada" width="100" height="120" />
+            <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
+            <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
 
 
-        <img src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
-        <img src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
-        <img src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
-        <img src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo" width="300" height="360" />
-        <img src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300" height="360" />
+            <img src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
+            <img src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
+            <img src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
+            <img src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo" width="300" height="360" />
+            <img src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300" height="360" />
 
-        <img src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300" height="360" />   
-        <img src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300" height="360" />
-        <img src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada" width="300" height="360" />
-        <img src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
-        <img src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300" height="360" />
-    </div>
+            <img src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300" height="360" />
+            <img src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300" height="360" />
+            <img src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada" width="300" height="360" />
+            <img src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
+            <img src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300" height="360" />
+        </div>
+        <section id="info-ramos" class="info-ramos">
+            <h2>Más informacion sobre nuestros ramos</h2>
+            <p>Nos gusta ofrecer la mejor calidad en flores a nuestros clientes, por eso diseñamos esta página web que nos permite distribuir los mejores ramos florales a toda la patagonia y con todo su encanto.</p>
+            <p>A través de esta web oficial de Flores Encantadas, podrás elegir de nuestro catálogo las flores que más te gusten. Personalizá el ramo de tus sueños. </p>
+        </section>
 
+        <section id="registrarse" class="registrarse">
+            <h2>Registrarse</h2>
+            <p>Registrate para acceder a todo nuestro catálago y pedir tu ramo de flores personalizado.</p>
+            <form action="#">
+                <label for="nombre">Nombre de usuario:</label>
+                <input type="text" id="nombre" name="nombre" />
+
+                <label for="contra">Contraseña:</label>
+                <input type="password" id="contra" name="contra" />
+
+                <input type="submit" name="registrar" value="Registrar" />
+            </form>
+        </section>
+
+        <footer>
+            <p>2024 Flores Encantadas.</p>
+        </footer>
 </body>
-</html>
 
+</html>
