--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -77,7 +77,7 @@
             <label for="contra">Contraseña:</label>
             <input type="password" id="contra" name="contra" />
 
-            <input type="submit" name="registrar" value="Registrar" />
+            <input type="submit" name="registrarse" value="Registrarse" id="registrarse" />
         </form>
     </section>
 
