agregando section NOSOTROS, en html

--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -67,6 +67,13 @@
         <p>A través de esta web oficial de Flores Encantadas, podrás elegir de nuestro catálogo las flores que más te gusten. Personalizá el ramo de tus sueños. </p>
     </section>
 
+    <section id="nosotros" class="nosotros">
+        <h2>Nosotros</h2>
+        <p>Somos la empresa Flores Encantadas dedicada a la venta de flores y ramos. Trabajamos y cuidamos flores de campo hace más de 15 años en locales distribuidos por la patagonia. Los ramos son cosechados en campos naturales de nuestra propiedad y de
+            forma sustentable.
+        </p>
+    </section>
+
     <section id="registrarse" class="registrarse">
         <h2>Registrarse</h2>
         <p>Registrate para acceder a todo nuestro catálago y pedir tu ramo de flores personalizado.</p>
