nombre para las flores

--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <header>
         <div class="logo">
             <img src="" alt="" />
@@ -39,35 +39,56 @@
         </section>
     </header>
 
-        <section id="centrarCaja">
-          
-            <div id="cajaImg">
-                <div id="cat">
-                <p id="titleC"> Vea parte de nuestro catalogo:</p>
-                </div>
-                <div id="img1">
-                    <img class="imgTipo1" id="borde1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
-                    <img class="imgTipo1" src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
-                    <img class="imgTipo1" src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
-                    <img class="imgTipo1" src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100"
-                        height="120" />
-                    <img class="imgTipo1" src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100"
-                        height="120" /> </br>
+    <section id="centrarCaja">
 
-                    <img class="imgTipo1" src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100"
-                        height="120" />
-                    <img class="imgTipo1" src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100"
-                        height="120" />
-                    <img class="imgTipo1" src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas" title="Orquidea Manchada"
-                        width="100" height="120" />
-                    <img class="imgTipo1" src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
-                    <img class="imgTipo1" src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
-                </div>
-                <div id="img2">
-                  <img class="imgTipo2" id="muestra1" src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
-                    <img class="imgTipo2" id="muestra2" src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
-                    <img class="imgTipo2"  id="muestra3" src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
-                 <!--     <img class="imgTipo2"  id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
+        <div id="cajaImg">
+            <div id="cat">
+                <p id="titleC"> Vea parte de nuestro catalogo:</p>
+            </div>
+            <div id="nombres1">
+                <span>Rosa azul</span>
+                <span>Rosa roja</span>
+                <span>Rosa rosada</span>
+                <span>Tulipan amarillo</span>
+                <span>Tulipan naranja</span>
+            </div>
+            <div id="nombres2">
+                <span id="n6">Orquidea blanca</span>
+                <span>Orquidea azul</span>
+                <span>Orquidea manchas</span>
+                <span>Gualda</span>
+                <span>Jazmin</span>
+            </div>
+            <div id="img1_e1">
+                <img class="imgTipo1" id="borde1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul"
+                    width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100"
+                    height="120" />
+                <img class="imgTipo1" src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100"
+                    height="120" />
+                <img class="imgTipo1" src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo"
+                    title="Tulipan amarillo" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja"
+                    width="100" height="120" />
+            </div>
+            <div id="img1_e2">
+                <img class="imgTipo1" src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca"
+                    width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul"
+                    width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas"
+                    title="Orquidea Manchada" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
+            </div>
+            <div id="img2">
+                <img class="imgTipo2" id="muestra1" src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul"
+                    width="300" height="360" />
+                <img class="imgTipo2" id="muestra2" src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja"
+                    width="300" height="360" />
+                <img class="imgTipo2" id="muestra3" src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada"
+                    width="300" height="360" />
+                <!--     <img class="imgTipo2"  id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
                         width="300" height="360" />
                     <img class="imgTipo2"  id="muestra5" src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300"
                         height="360" />
@@ -80,11 +101,12 @@
                         width="300" height="360" />
                     <img class="imgTipo2"  id="muestra9" src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
                     <img class="imgTipo2"  id="muestra10" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300"  height="360" />
-             -->   </div>
+             -->
             </div>
-        </section>
+        </div>
+    </section>
 
-        <div id="pueba"></div>
+    <div id="pueba"></div>
 </body>
 
 </html>
