--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal</title>
+    <title>Floreria "Flores Encantadas"</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="" alt="" />
+            <img src="imagenes/Borde generativo AI de flores silvestres del prado en blanco _ Imagen Premium generada con IA.jpeg" alt="floressilvestres.jpeg" />
         </div>
         <nav>
             <ul>
