--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/Borde generativo AI de flores silvestres del prado en blanco _ Imagen Premium generada con IA.jpeg" alt="floressilvestres.jpeg" />
+            <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
         </div>
         <nav>
             <ul>
