--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -18,7 +18,7 @@
                 <li><a href="Inicio">Inicio</a></li>
                 <li><a href="Registro">Resgistrarse</a></li>
                 <li><a href="Pedido">Pedido</a></li>
-                <li><a href="Nosotros"> nosotros</a></li>
+                <li><a href="Nosotros"> Nosotros</a></li>
             </ul>
         </nav>
     </header>
@@ -26,6 +26,7 @@
     <section id="Inicio" class="inicio">
         <div class="contenido-inicio">
             <h1>Flores Encantadas</h1>
+            <p>•——————•°•✿•°•——————•</p>
             <p>"Flores frescas, emociones frescas"</p>
             <p>"El encanto de las flores frescas"</p>
         </div>
