agregando hover a pie de pagina

--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -87,8 +87,10 @@
     </section>
 
     <footer>
-        <p>2024 Flores Encantadas.</p>
-        <p>"El encanto de las flores frescas"</p>
+        <div> 
+            <p>2024 Flores Encantadas.</p>
+            <p>"El encanto de las flores frescas"</p>
+        </div>
     </footer>
 </body>
 
