poniendo grandiente a los parrafos

--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -84,7 +84,7 @@
             <label for="contra">Contraseña:</label>
             <input type="password" id="contra" name="contra" />
 
-            <input type="submit" name="registrarse" value="Registrarse" id="registrarse" />
+            <input type="submit" name="registro" value="Registro" id="registro" />
         </form>
     </section>
 
