--- a/TP2_grupal.html
+++ b/TP2_grupal.html
@@ -88,7 +88,7 @@
                     width="300" height="360" />
                 <img class="imgTipo2" id="muestra3" src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada"
                     width="300" height="360" />
-                <!--     <img class="imgTipo2"  id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
+                     <img class="imgTipo2"  id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
                         width="300" height="360" />
                     <img class="imgTipo2"  id="muestra5" src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300"
                         height="360" />
@@ -101,7 +101,7 @@
                         width="300" height="360" />
                     <img class="imgTipo2"  id="muestra9" src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
                     <img class="imgTipo2"  id="muestra10" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300"  height="360" />
-             -->
+            
             </div>
         </div>
     </section>
