agregando footer al index.html

--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
             <input type="submit" name="registrarse" value="Registrarse" id="registrarse" />
         </form>
     </section>
+
+    <footer>
+        <div> 
+            <p>2024 Flores Encantadas.</p>
+            <p>"El encanto de las flores frescas"</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
