Modificacion del indice y de subtitulos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal</title>
-    <title>Floreria "Flores Encantadas"</title>
+    <title>Flores Encantadas</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -21,7 +20,7 @@
                     <li><a href="Inicio">Inicio</a></li>
                     <li><a href="Registro">Resgistrarse</a></li>
                     <li><a href="Pedido">Pedido</a></li>
-                    <li><a href="Nosotros"> nosotros</a></li>
+                    <li><a href="Catalogo"> nosotros</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,9 +31,9 @@
         <div class="contenido-inicio">
             <h1>Flores Encantadas</h1>
             <p>•——————•°•✿•°•——————•</p>
-            <p>"Flores frescas, emociones frescas"</p>
             <p>"El encanto de las flores frescas"</p>
-            <p>Personalizá el ramo de tus sueños!</p>
+            <!--<p>"Flores frescas, emociones frescas"</p>
+            <p>Personalizá el ramo de tus sueños!</p> -->
         </div>
     </section>
     <section id="centrarCaja">
