Creando pestaña categoria

--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
                     <li><a href="Inicio">Inicio</a></li>
                     <li><a href="Registro">Resgistrarse</a></li>
                     <li><a href="Pedido">Pedido</a></li>
-                    <li><a href="Catalogo"> nosotros</a></li>
+                    <li><a href="Catalogo">Nosotros</a></li>
                 </ul>
             </nav>
         </header>
-
-    </header>
 
     <section id="Inicio" class="inicio">
         <div class="contenido-inicio">
@@ -36,6 +34,8 @@
             <p>Personalizá el ramo de tus sueños!</p> -->
         </div>
     </section>
+
+
     <section id="centrarCaja">
 
         <div id="cajaImg">
