--- a/categoria.html
+++ b/categoria.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flores Encantadas</title>
+    <title>Categoria de Flores Encantadas</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 </body>
