--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -8,6 +8,24 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+        </div>
+        <header>
+
+            <nav>
+                <ul>
+                    <li><a href="Inicio">Inicio</a></li>
+                    <li><a href="Registro">Resgistrarse</a></li>
+                    <li><a href="Pedido">Pedido</a></li>
+                    <li><a href="Nosotros"> nosotros</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    </header>
+
     <h1>Registrarme</h1>
     <form>
         <label for="nom">Nombre: </label>
