creando header de la pestaña categoria

--- a/categoria.html
+++ b/categoria.html
@@ -9,4 +9,23 @@
 </head>
 
 <body>
+    <header class="indice">
+        <div class="logo">
+        <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+    </div>
+    <header>
+
+        <nav>
+            <ul>
+                <li><a href="Inicio">Inicio</a></li>
+                <li><a href="Registro">Resgistrarse</a></li>
+                <li><a href="Pedido">Pedido</a></li>
+                <li><a href="categoria.html">Categoria</a></li>
+            </ul>
+        </nav>
+    </header>
+
+     <!--contenido de pagina-->
+     
+
 </body>
