titulo principal de categoria

--- a/categoria.html
+++ b/categoria.html
@@ -12,8 +12,7 @@
     <header class="indice">
         <div class="logo">
         <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
-    </div>
-    <header>
+        </div>
 
         <nav>
             <ul>
@@ -26,6 +25,15 @@
     </header>
 
      <!--contenido de pagina-->
+     <section id="catalogos">
+        <div class="img_inicio">
+            <div id="titulo">
+                <h1>¡Personalizá el ramo de tus sueños!</h1>
+                <p id="tituloB"> Vea parte de nuestro catalogo:</p>
+            </div>
+        </div>
+     </section>
+
      
 
 </body>
