molde para poner las futuras img

--- a/categoria.html
+++ b/categoria.html
@@ -31,6 +31,17 @@
                 <h1>¡Personalizá el ramo de tus sueños!</h1>
                 <p id="tituloB"> Vea parte de nuestro catalogo:</p>
             </div>
+            <!--productos grid-->
+            <div class="img">
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">
+                        <img src="" alt="">
+                        <div class="productorosa">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
      </section>
 
