info en ordenada en cajas de las flores

--- a/categoria.html
+++ b/categoria.html
@@ -37,7 +37,10 @@
                     <div class="productos">
                         <img src="" alt="">
                         <div class="productorosa">
-                            
+                            <h2 class="texto_info">
+                                Ramo de tulipanes
+                            </h2>
+                            <h3 class="precio">$30.000</h3>
                         </div>
                     </div>
                 </div>
