modificando el tamaño de la info

--- a/categoria.html
+++ b/categoria.html
@@ -29,7 +29,7 @@
         <div class="img_inicio">
             <div id="titulo">
                 <h1>¡Personalizá el ramo de tus sueños!</h1>
-                <p id="tituloB"> Vea parte de nuestro catalogo:</p>
+                <h2> Vea parte de nuestro catalogo:</h2>
             </div>
             <!--productos grid-->
             <div class="img">
@@ -37,10 +37,10 @@
                     <div class="productos">
                         <img src="" alt="">
                         <div class="productorosa">
-                            <h2 class="texto_info">
+                            <h3 class="texto_info">
                                 Ramo de tulipanes
-                            </h2>
-                            <h3 class="precio">$30.000</h3>
+                            </h3>
+                            <h4 class="precio">$30.000</h4>
                         </div>
                     </div>
                 </div>
