Agregando primera imagen con sus atributos al catalogo

--- a/categoria.html
+++ b/categoria.html
@@ -35,7 +35,7 @@
             <div class="img">
                 <div class="col-md-4 col-sm-6 col-mb-4">
                     <div class="productos">
-                        <img src="" alt="">
+                        <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120">
                         <div class="productorosa">
                             <h3 class="texto_info">
                                 Ramo de tulipanes
