agregando seciones de la pagina de pedidos

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -6,6 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <p>aaaa</p>
+    <!--agregar encabezado-->
+    <section id="cent_inicio">
+        <div id="inicio">
+            <h1>Haga su pedido</h1>
+            <p>Le ofrecemos persolanizacion y variedad a nuestros clientes</p>
+            <p>Vea nuestro catalogo de flores</p>
+            <a href="../catalogo/catalogo.html">-----</a>
+        </div>
+    </section>
+
+    <section id="cent_flores">
+        <div id="flores">
+
+        </div>
+    </section>
+
+    <section id="cent_carta">
+        <div id="carta">
+
+        </div>
+    </section>
+    
+
 </body>
 </html>
