agedando listas para pedido de flor 1

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -18,6 +18,45 @@
 
     <section id="cent_flores">
         <div id="flores">
+            <h2>Puede elegir hasta 3 tipos de flores</h2>
+            <div id="flor1">
+                <p>Flor 1</p>
+
+                <label for="cant1">Cantidad:</label>
+                <select name="cant1" id="cant1">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                </select>
+            
+                <label for="tipo1">Tipo:</label>
+                <select name="tipo1" id="tipo1">
+                    <option value="" disabled>Seleccione</option>
+                    <option value="rosaAzul">Rosa azul</option>
+                    <option value="rosaRoja">Rosa roja</option>
+                    <option value="rosaRosa">Rosa rosada</option>
+                    <option value="tuliAm">Tulipan amarillo</option>
+                    <option value="tuliNar">Tulipan naranja</option>
+                    <option value="orqBlanca">Orquidea blanca</option>
+                    <option value="orqAzul">Orquidea azul</option>
+                    <option value="orqManchas">Orquidea manchas</option>
+                    <option value="gualda">Gualda</option>
+                    <option value="jazmin">Jazmin</option>
+                </select>
+
+            </div>
 
         </div>
     </section>
