copiando listas para pedido de flor 2 y 3

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -55,7 +55,82 @@
                     <option value="gualda">Gualda</option>
                     <option value="jazmin">Jazmin</option>
                 </select>
+            </div>
+            <div id="flor2">
+                <p>Flor 2</p>
 
+                <label for="cant2">Cantidad:</label>
+                <select name="cant2" id="cant2">
+                    <option value=""disabled>-</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                </select>
+            
+                <label for="tipo2">Tipo:</label>
+                <select name="tipo2" id="tipo2">
+                    <option value="" disabled>Seleccione</option>
+                    <option value="rosaAzul">Rosa azul</option>
+                    <option value="rosaRoja">Rosa roja</option>
+                    <option value="rosaRosa">Rosa rosada</option>
+                    <option value="tuliAm">Tulipan amarillo</option>
+                    <option value="tuliNar">Tulipan naranja</option>
+                    <option value="orqBlanca">Orquidea blanca</option>
+                    <option value="orqAzul">Orquidea azul</option>
+                    <option value="orqManchas">Orquidea manchas</option>
+                    <option value="gualda">Gualda</option>
+                    <option value="jazmin">Jazmin</option>
+                </select>
+            </div>
+            <div id="flor3">
+                <p>Flor 3</p>
+
+                <label for="cant3">Cantidad:</label>
+                <select name="cant3" id="cant3">
+                    <option value=""disabled>-</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                </select>
+            
+                <label for="tipo3">Tipo:</label>
+                <select name="tipo3" id="tipo3">
+                    <option value="" disabled>Seleccione</option>
+                    <option value="rosaAzul">Rosa azul</option>
+                    <option value="rosaRoja">Rosa roja</option>
+                    <option value="rosaRosa">Rosa rosada</option>
+                    <option value="tuliAm">Tulipan amarillo</option>
+                    <option value="tuliNar">Tulipan naranja</option>
+                    <option value="orqBlanca">Orquidea blanca</option>
+                    <option value="orqAzul">Orquidea azul</option>
+                    <option value="orqManchas">Orquidea manchas</option>
+                    <option value="gualda">Gualda</option>
+                    <option value="jazmin">Jazmin</option>
+                </select>
             </div>
 
         </div>
