--- a/categoria.html
+++ b/categoria.html
@@ -41,6 +41,9 @@
                                 Ramo de rosa
                             </h3>
                             <h4 class="precio">$2.000</h4>
+                        </div>
+                    </div>
+                </div>        
                             <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
                             <div class="productorosa">
                                 <h3 class="texto_info">
