--- a/categoria.html
+++ b/categoria.html
@@ -44,18 +44,29 @@
                         </div>
                     </div>
                 </div>        
-                            <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
-                            <div class="productorosa">
-                                <h3 class="texto_info">
-                                    Ramo de rosa 
-                                </h3>
-                                <h4 class="precio">$2.000</h4>
-                                <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de rosa
-                                    </h3>
-                                    <h4 class="precio">$3.000</h4>
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">
+                        <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de rosa 
+                            </h3>
+                            <h4 class="precio">$2.000</h4>
+                        </div>
+                    </div>    
+                </div>
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">
+                        <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de rosa
+                            </h3>
+                            <h4 class="precio">$3.000</h4>
+                        </div>
+                    </div>
+                </div>
+                    
                                 <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
                                 <div class="productorosa">
                                     <h3 class="texto_info">
