añadiendo elementos en la seccion para carta

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -138,7 +138,19 @@
 
     <section id="cent_carta">
         <div id="carta">
+            <h2>Carta para acompañar su ramo</h2>
 
+            <label for="escribir">Escribir</label>
+            <textarea name="escribir" id="escribir" maxlength="300"></textarea>
+            <!--añadir   resize: none; para que no cambie de tamaño-->
+
+            <div id="persCarta">
+                <p>Tipo de letra:</p>
+                <label for="cursiva">Cursiva</label>
+                <input type="radio" name="tLetra" id="cursiva" value="cursiva">
+                <label for="imprenta">Imprenta</label>
+                <input type="radio" name="tLetra" id="imprenta" value="imprenta">
+            </div>
         </div>
     </section>
     
